Fix image sizes to square and align items end.

--- a/client/src/components/ArtistPage/ArtistPage.css
+++ b/client/src/components/ArtistPage/ArtistPage.css
@@ -17,7 +17,7 @@
 
 .ArtistPage-img {
   width: 80px;
-  height: auto;
+  height: 80px;
   object-fit: cover;
   border-radius: 3px;
 }
@@ -110,6 +110,7 @@
   }
   .ArtistPage-img {
     width: 160px;
+    height: 160px;
     align-self: flex-start;
   }
   .Page-admin-controls {
